--- a/basestart.libraries.yml
+++ b/basestart.libraries.yml
@@ -2,8 +2,7 @@ global-css:
   version: 1.0
   css:
     theme:
-      # 'https://use.typekit.net/gwg8ibd.css': { type: external }
-      # dist/css/main.css: {}
+      dist/css/main.css: {}
 global-js:
   version: 1.0
   js:
