--- a/basestart.info.yml
+++ b/basestart.info.yml
@@ -1,7 +1,7 @@
 name: Basestart
 type: theme
 description: The parent theme for Basestart
-core_version_requirement: ^8 || ^9|| ^10
+core_version_requirement: ^9|| ^10
 base theme: false
 
 libraries:
@@ -10,24 +10,18 @@ libraries:
 
 regions:
   top_header: 'Top header'
-  top_header_form: 'Top header form'
   header: Header
-  header_form: 'Header form'
   primary_menu: 'Primary menu'
   secondary_menu: 'Secondary menu'
-  page_top: 'Page top'
-  page_bottom: 'Page bottom'
   highlighted: Highlighted
-  featured_top: 'Featured top'
+  page_top: 'Page top'
   breadcrumb: Breadcrumb
   content: Content
-  sidebar_first: 'Sidebar first'
-  sidebar_second: 'Sidebar second'
-  featured_bottom_first: 'Featured bottom first'
-  featured_bottom_second: 'Featured bottom second'
-  featured_bottom_third: 'Featured bottom third'
+  page_bottom: 'Page bottom'
+  sidebar: 'Sidebar'
   footer_first: 'Footer first'
   footer_second: 'Footer second'
   footer_third: 'Footer third'
   footer_fourth: 'Footer fourth'
-  footer_fifth: 'Footer fifth'
+  footer_bottom: 'Footer bottom'
+  admin: 'Admin'
